--- a/index.html
+++ b/index.html
@@ -3,15 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-   <h1>자기소개</h1>
-    <ul>
-    <li>이름 : 최태민</li>
-    <li>나이 : 18살</li>
-    <li>취미 : 잠자기</li>
-    </ul>
+    <div class="container">
+        <div class="header">
+            <div class="logo">
+                CTM
+            </div>
+            <ul class="menu">
+                <li><a href="#">About</a></li>
+                <li><a href="#">Skills</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+        <div class="main">
+            <h1>Welcome To My Homepage!!!</h1>
+            <h2>I'M A WEB DEVELOPER</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, ullam cumque? Natus dicta expedita explicabo sequi dignissimos odio debitis, fuga repellendus incidunt quia commodi consequuntur! Asperiores veniam commodi harum suscipit?
+            </p>
+            <button>Download CV</button>
+        </div>
+    </div>
 
     
 </body>
