--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
 <body>
@@ -13,7 +14,7 @@
                 CTM
             </div>
             <ul class="menu">
-                <li><a href="#">About</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="#">Skills</a></li>
                 <li><a href="#">Projects</a></li>
                 <li><a href="#">Contact</a></li>
@@ -28,7 +29,26 @@
             <button>Download CV</button>
         </div>
     </div>
+    <div class="about" id="about">
+        <h2>Who Am I</h2>
+        <h1>About Me</h1>
+        <div class="contents">
+            <div class="left">
+                <img src="about.jpg" alt="about">
+            </div>
+            <div class="right">
+                <h3>Hello, I'm CTM</h3>
+                <ul>
+                    <li>I'm a Wab Designer and Front-End Developer</li>
+                    <li>Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing</li>
+                    <li>Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing</li>
+                    <li>Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur</li>
+                    <li><i class="fa-brands fa-youtube"></i><i class="fa-brands fa-facebook"></i><i class="fa-brands fa-github"></i></li>
 
+                </ul>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
