--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
+
 <body>
     <div class="container">
         <div class="header">
@@ -15,16 +19,18 @@
             </div>
             <ul class="menu">
                 <li><a href="#about">About</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
         <div class="main">
             <h1>Welcome To My Homepage!!!</h1>
             <h2>I'M A WEB DEVELOPER</h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, ullam cumque? Natus dicta expedita explicabo sequi dignissimos odio debitis, fuga repellendus incidunt quia commodi consequuntur! Asperiores veniam commodi harum suscipit?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, ullam cumque? Natus dicta expedita
+                explicabo sequi dignissimos odio debitis, fuga repellendus incidunt quia commodi consequuntur!
+                Asperiores veniam commodi harum suscipit?
             </p>
             <button>Download CV</button>
         </div>
@@ -40,15 +46,107 @@
                 <h3>Hello, I'm CTM</h3>
                 <ul>
                     <li>I'm a Wab Designer and Front-End Developer</li>
-                    <li>Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing</li>
-                    <li>Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing</li>
-                    <li>Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur</li>
-                    <li><i class="fa-brands fa-youtube"></i><i class="fa-brands fa-facebook"></i><i class="fa-brands fa-github"></i></li>
+                    <li>Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing
+                        Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing
+                        Lorem ipsum dolor sit consectetur adipisicing</li>
+                    <li>Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing
+                        Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing
+                        Lorem ipsum dolor sit consectetur adipisicing</li>
+                    <li>Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing
+                        Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing
+                        Lorem ipsum dolor sit consectetur</li>
+                    <li><i class="fa-brands fa-youtube"></i><i class="fa-brands fa-facebook"></i><i
+                            class="fa-brands fa-github"></i></li>
 
                 </ul>
             </div>
         </div>
     </div>
-    
+    <div class="skills" id="skills">
+        <div class="skills-inner">
+            <h2>SKILLS</h2>
+            <h1>What I Do</h1>
+            <ul class="contents">
+                <li>
+                    <h3><i class="fa-brands fa-html5"></i>HTML</h3>
+                    <p>Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing Lorem
+                        ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing Lorem
+                        ipsum dolor sit consectetur adipisicing</p>
+                </li>
+                <li>
+                    <h3><i class="fa-brands fa-css3"></i></i>CSS</h3>
+                    <p>Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing Lorem
+                        ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing Lorem
+                        ipsum dolor sit consectetur adipisicing</p>
+                </li>
+                <li>
+                    <h3><i class="fa-regular fa-keyboard"></i>C++</h3>
+                    <p>Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing Lorem
+                        ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing Lorem
+                        ipsum dolor sit consectetur adipisicing</p>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="bg"></div>
+
+    <div class="skills projects" id="projects">
+        <div class="skills-inner">
+            <h2>Projects</h2>
+            <h1>What I Do</h1>
+            <ul class="contents">
+                <li>
+                    <h3><i class="fa-brands fa-html5"></i>HTML</h3>
+                    <p>Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing Lorem
+                        ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing Lorem
+                        ipsum dolor sit consectetur adipisicing</p>
+                </li>
+                <li>
+                    <h3><i class="fa-brands fa-css3"></i></i>CSS</h3>
+                    <p>Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing Lorem
+                        ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing Lorem
+                        ipsum dolor sit consectetur adipisicing</p>
+                </li>
+                <li>
+                    <h3><i class="fa-regular fa-keyboard"></i>C++</h3>
+                    <p>Lorem ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing Lorem
+                        ipsum dolor sit consectetur adipisicing Lorem ipsum dolor sit consectetur adipisicing Lorem
+                        ipsum dolor sit consectetur adipisicing</p>
+                </li>
+                
+            </ul>
+        </div>
+    </div>
+
+    <br>
+    <br>
+    <br>
+    <div class="contact" id="contact">
+        <div class="contact-inner">
+            <h2>CONTACT</h2>
+            <h1>CONTACT Wiht ME!</h1>
+            <div class="contacts">
+                <div class="left">
+                    <ul class="info">
+                        <li>Phone <br> 010-1234-1234</li>
+                        <li>Email <br> 6386ctm@gmail.com</li>
+                        <li>Address <br> 수원정보과학고등학교</li>
+                    </ul>
+                </div>
+                <div class="right">
+                    <h5>name</h5>
+                    <input type="text">
+                    <h5>emaill</h5>
+                    <input type="text">
+                    <h5>messge</h5>
+                    <textarea name="" id=""></textarea>
+                    <br>
+                    <button>Send</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
